--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Vagabond K's Indicators</title>
-    <base href="/BlazorIndicators/" />
+<!--    <base href="/BlazorIndicators/" />-->
+    <base href="/" />
     <link rel="shortcut icon" href="favicon.ico">
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
